# alpha_zero_ttoe_web

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
ttoe/: apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
ttoe/ai/: TicTacToeGame.py  best.h5  netwrapper.py  play.py
ttoe/migrations/: 0001_initial.py
ttoe/static/ttoe/: script.js  style.css
ttoe/templates/: index.html
ttoe_web/: asgi.py  settings.py  urls.py  wsgi.py
